[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-test-generator"
version = "0.1.0"
description = "A CLI tool for generating unit tests"
authors = ["Mateusz Sawa <mateusz.sawa@applandeo.pl>", "Patryk Matwijczuk <patryk.matwijczuk@applandeo.pl>"]
readme = "README.md"
repository = "https://github.com/your-username/your-application"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "test_generator" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
openai = "^1.35.15"
anthropic = "^0.31.2"
ollama = "^0.3.0"
pyperclip = "^1.9.0"
rich = "^13.7.1"
psutil = "^6.0.0"

[tool.poetry.scripts]
ai-test-generator = "test_generator.main:main"